--- a/public/testgame.html
+++ b/public/testgame.html
@@ -92,12 +92,12 @@
         <div id="counter">
 
             <div class="turn">
-                <h2 style="margin:0">Round 7</h2>
+                <h2 style="margin: 0" id="round-number">Round 7</h2>
             </div>
 
             <div class="turn" style="margin-top: .3rem; padding: .8rem; display:flex; justify-content: space-between;">
 
-                <code style="font-weight:normal; font-size:1rem;">P1 Turn</code>
+                <code style="font-weight:normal; font-size:1rem;" id="turn-number">P1 Turn</code>
                 <code style="font-weight:normal; font-size:1rem;"><label id="minutes">00</label>:<label id="seconds">00</label></code>
 
             </div>
