--- a/public/testgame.html
+++ b/public/testgame.html
@@ -20,17 +20,17 @@
 
         <div id="mini-sheets">
 
-            <div style="width: fit-content; border-radius:4px; overflow:hidden; border: 1px solid gray;">
+            <div style="width: 100%; border-radius:4px; overflow:hidden; border: 1px solid gray;">
 
                 <table>
 
                     <tr>
-                        <th>Name</td>
-                        <th>AP</td>
-                        <th>HP</td>
-                        <th>POW</td>
-                        <th>DEF</td>
-                        <th>ACC</td>
+                        <th style="width: 100%">Name</td>
+                        <th style="width: 100%">AP</td>
+                        <th style="width: 100%">HP</td>
+                        <th style="width: 100%">POW</td>
+                        <th style="width: 100%">DEF</td>
+                        <th style="width: 100%">ACC</td>
                     </tr>
 
                     <tr>
@@ -40,6 +40,24 @@
                         <td><span id="pow">?</span></td>
                         <td><span id="def">?</span></td>
                         <td><span id="acc">?</span></td>
+                    </tr>
+
+                </table>
+
+            </div>
+
+            <div style="width: 100%; border-radius:4px; overflow:hidden; margin-top: 1rem; border: 1px solid gray;">
+
+                <table>
+
+                    <tr>
+                        <th style="width: 100%">Health</td>
+                        <th style="width: 100%">AP</td>
+                    </tr>
+
+                    <tr>
+                        <td><span id="hpbar"></span></td>
+                        <td><span id="apbar"></span></td>
                     </tr>
 
                 </table>
