--- a/public/match.html
+++ b/public/match.html
@@ -16,8 +16,10 @@
         <!-- Libraries -->
         <script src="./js/lib/jquery-3.6.0.min.js"></script>
         <script src="./js/lib/p5.min.js"></script>
+        <script src="./js/lib/p5.sound.min.js"></script>
 
         <script type="text/javascript" src="./js/manager.js"></script>
+        <script type="text/javascript" src="./js/utils.js"></script>
 
         <!-- Request Scripts -->
         <script type="application/javascript" src="./js/requests/characterRequests.js"></script>
@@ -27,6 +29,7 @@
         <!-- Static Managers -->
         <script type="application/javascript" src="./js/obj/gameManager.js"></script>
         <script type="application/javascript" src="./js/obj/uiManager.js"></script>
+        <script type="application/javascript" src="./js/obj/audioManager.js"></script>
 
         <!-- Objects -->
         <script type="application/javascript" src="./js/obj/board.js"></script>
