--- a/public/testgame.html
+++ b/public/testgame.html
@@ -130,13 +130,21 @@
 
         <script type="text/javascript" src="./js/manager.js"></script>
 
+        <script src="./js/obj/gameManager.js"></script>
+
         <!-- Request Scripts -->
         <script type="application/javascript" src="./js/requests/characterRequests.js"></script>
         <script type="application/javascript" src="./js/requests/matchRequests.js"></script>
         <script type="application/javascript" src="./js/requests/playerRequests.js"></script>
+        <script type="application/javascript" src="./js/requests/skillRequests.js"></script>
         
         <!-- Page Script -->
         <script type="application/javascript" src="./js/test.js"></script>
+        <script type="application/javascript" src="./js/obj/character.js"></script>
+        <script type="application/javascript" src="./js/obj/skills.js"></script>
+        <script type="application/javascript" src="./js/obj/board.js"></script>
+        <script type="application/javascript" src="./js/obj/tile.js"></script>
+        <script type="application/javascript" src="./js/obj/guardian.js"></script>
 
     </body>
 
