Added more stuff...!

--- a/public/match.html
+++ b/public/match.html
@@ -16,10 +16,10 @@
         <!-- Libraries -->
         <script src="./js/lib/jquery-3.6.0.min.js"></script>
         <script src="./js/lib/p5.min.js"></script>
-        <script src="./js/lib/p5.sound.min.js"></script>
+        <script src="./js/lib/howler.min.js"></script>
 
-        <script type="text/javascript" src="./js/manager.js"></script>
         <script type="text/javascript" src="./js/utils.js"></script>
+        <script type="text/javascript" src="./js/colours.js"></script>
 
         <!-- Request Scripts -->
         <script type="application/javascript" src="./js/requests/characterRequests.js"></script>
