SOME SERVER LOGIC LETS FUCKING GOOOO

--- a/public/match.html
+++ b/public/match.html
@@ -36,6 +36,7 @@
         <script type="application/javascript" src="./js/obj/tile.js"></script>
         <script type="application/javascript" src="./js/obj/character.js"></script>
         <script type="application/javascript" src="./js/obj/guardian.js"></script>
+        <script type="application/javascript" src="./js/obj/skill.js"></script>
         
         <!-- Page Script -->
         <script type="application/javascript" src="./js/match.js"></script>
