--- a/public/match.html
+++ b/public/match.html
@@ -25,6 +25,7 @@
         <script type="application/javascript" src="./js/requests/characterRequests.js"></script>
         <script type="application/javascript" src="./js/requests/matchRequests.js"></script>
         <script type="application/javascript" src="./js/requests/playerRequests.js"></script>
+        <script type="application/javascript" src="./js/requests/skillRequests.js"></script>
 
         <!-- Static Managers -->
         <script type="application/javascript" src="./js/obj/gameManager.js"></script>
