Preparing for death.

--- a/public/match.html
+++ b/public/match.html
@@ -26,6 +26,7 @@
         <script type="application/javascript" src="./js/requests/matchRequests.js"></script>
         <script type="application/javascript" src="./js/requests/playerRequests.js"></script>
         <script type="application/javascript" src="./js/requests/skillRequests.js"></script>
+        <script type="application/javascript" src="./js/requests/matchCharacterRequests.js"></script>
 
         <!-- Static Managers -->
         <script type="application/javascript" src="./js/obj/gameManager.js"></script>
