--- a/public/match.html
+++ b/public/match.html
@@ -5,7 +5,7 @@
     <head>
 
         <title>Isle of Mist - Match</title>
-        <link rel="stylesheet" href="./css/match.css">
+        <link rel="stylesheet" href="../css/match.css">
 
         <script src="https://kit.fontawesome.com/d1c951a24f.js" crossorigin="anonymous"></script>
 
@@ -14,34 +14,35 @@
     <body>
 
         <!-- Libraries -->
-        <script src="./js/lib/jquery-3.6.0.min.js"></script>
-        <script src="./js/lib/p5.min.js"></script>
-        <script src="./js/lib/howler.min.js"></script>
+        <script type="application/javascript" src="../js/lib/jquery-3.6.0.min.js"></script>
+        <script type="application/javascript" src="../js/lib/p5.min.js"></script>
+        <script type="application/javascript" src="../js/lib/howler.min.js"></script>
 
-        <script type="text/javascript" src="./js/utils.js"></script>
-        <script type="text/javascript" src="./js/colours.js"></script>
+        <!-- Utilities -->
+        <script type="application/javascript" src="../js/utils.js"></script>
+        <script type="application/javascript" src="../js/colours.js"></script>
 
         <!-- Request Scripts -->
-        <script type="application/javascript" src="./js/requests/characterRequests.js"></script>
-        <script type="application/javascript" src="./js/requests/matchRequests.js"></script>
-        <script type="application/javascript" src="./js/requests/playerRequests.js"></script>
-        <script type="application/javascript" src="./js/requests/skillRequests.js"></script>
-        <script type="application/javascript" src="./js/requests/matchCharacterRequests.js"></script>
+        <script type="application/javascript" src="../js/requests/characterRequests.js"></script>
+        <script type="application/javascript" src="../js/requests/matchRequests.js"></script>
+        <script type="application/javascript" src="../js/requests/playerRequests.js"></script>
+        <script type="application/javascript" src="../js/requests/skillRequests.js"></script>
+        <script type="application/javascript" src="../js/requests/matchCharacterRequests.js"></script>
 
         <!-- Static Managers -->
-        <script type="application/javascript" src="./js/obj/gameManager.js"></script>
-        <script type="application/javascript" src="./js/obj/uiManager.js"></script>
-        <script type="application/javascript" src="./js/obj/audioManager.js"></script>
+        <script type="application/javascript" src="../js/obj/gameManager.js"></script>
+        <script type="application/javascript" src="../js/obj/uiManager.js"></script>
+        <script type="application/javascript" src="../js/obj/audioManager.js"></script>
 
         <!-- Objects -->
-        <script type="application/javascript" src="./js/obj/board.js"></script>
-        <script type="application/javascript" src="./js/obj/tile.js"></script>
-        <script type="application/javascript" src="./js/obj/character.js"></script>
-        <script type="application/javascript" src="./js/obj/guardian.js"></script>
-        <script type="application/javascript" src="./js/obj/skill.js"></script>
+        <script type="application/javascript" src="../js/obj/board.js"></script>
+        <script type="application/javascript" src="../js/obj/tile.js"></script>
+        <script type="application/javascript" src="../js/obj/character.js"></script>
+        <script type="application/javascript" src="../js/obj/guardian.js"></script>
+        <script type="application/javascript" src="../js/obj/skill.js"></script>
         
         <!-- Page Script -->
-        <script type="application/javascript" src="./js/match.js"></script>
+        <script type="application/javascript" src="../js/match.js"></script>
 
     </body>
 
