--- a/public/match.html
+++ b/public/match.html
@@ -28,6 +28,8 @@
         <script type="application/javascript" src="../js/requests/playerRequests.js"></script>
         <script type="application/javascript" src="../js/requests/skillRequests.js"></script>
         <script type="application/javascript" src="../js/requests/matchCharacterRequests.js"></script>
+        <script type="application/javascript" src="../js/requests/guardianRequests.js"></script>
+        <script type="application/javascript" src="../js/requests/cheatRequests.js"></script>
 
         <!-- Static Managers -->
         <script type="application/javascript" src="../js/obj/gameManager.js"></script>
